--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 ---
 layout: home
 ---
+
+<html>
+  <head>
+   <meta name=”google-site-verification”    content=”nv4DZ_bgoun6A0bDg9hTRjz681gdd0Rv9Ny0tWpfdN0” />
+  </head>
+</html>
